:bug: Fix "Giving Back" overlapping with footer

--- a/_sass/39alpha/_layout.scss
+++ b/_sass/39alpha/_layout.scss
@@ -324,7 +324,6 @@
 }
 
 .giving {
-    position: absolute;
     width: 100%;
     left: 0%;
 }
